plugins {
    id 'java'
    id 'application'
}

group = 'carsharing'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'carsharing.Main'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.h2database', name: 'h2', version: '2.1.214'
    implementation 'com.formdev:flatlaf:3.4.1'
    implementation 'com.formdev:flatlaf-extras:3.4.1'
    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
    testImplementation platform('org.junit:junit-bom:5.12.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
}

test {
    useJUnitPlatform()
    jvmArgs('-Dnet.bytebuddy.experimental=true', '-Djava.awt.headless=true')
    testLogging {
        events "passed", "skipped", "failed"
    }
}
